Fix issue #161: define "lang:" prefix in examples
Apparently the "lang:" prefix is used in a few (three) examples without
being defined. If I read the report correctly that should be a prefix of
IRIs pointing to machine readable definitions of OMS conforming
languages. As I'm not aware of any existing IRIs for this, I just used a
OMG mock up like the ones used for the "log:" and "trans:" prefixes
which are mock ups, (i.e. they don't exist) too.
Please reopen if this is not the right way to go about this issue.

On a side note, there's also a "ser:" prefix used but not defined in a
few of the examples. I don't know whether that's a problem too, or
whether the "ser:" prefix is special as it is used for
syntax/serializations and points to a "special" Hets builtin (as per
comments).

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9047,6 +9047,8 @@ interpretation repair3 : Repair to MyRepair = %cons
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,import},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/mereology#>
          owl:   <http://www.w3.org/2002/07/owl#>
+         lang:  <http://www.omg.org/spec/DOL/languages/>
+                %% definitions of conforming languages
          log:   <http://www.omg.org/spec/DOL/logics/>    
 		 		%% descriptions of logics ...
          trans: <http://www.omg.org/spec/DOL/translations/> )%  
@@ -9206,6 +9208,8 @@ end
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
 %prefix( :     <http://www.example.org/alignment#>
          owl:   <http://www.w3.org/2002/07/owl#>
+         lang:  <http://www.omg.org/spec/DOL/languages/>
+                %% definitions of conforming languages
          log:   <http://www.omg.org/spec/DOL/logics/> %% descriptions of logics ...
          trans: <http://www.omg.org/spec/DOL/translations/> )% %% ... and translations
 
@@ -9262,6 +9266,8 @@ end
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
 %prefix( :     <http://www.example.org/mereology#>
          owl:   <http://www.w3.org/2002/07/owl#>
+         lang:  <http://www.omg.org/spec/DOL/languages/>
+                %% definitions of conforming languages
          log:   <http://www.omg.org/spec/DOL/logics/> %% descriptions of logics ...
          trans: <http://www.omg.org/spec/DOL/translations/> )% %% ... and translations
 
