--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2432,8 +2432,10 @@ Common Logic uses the term ``dialect''; the following are standard Common Logic 
 \sclause{Logic}\label{c:term-logic}
 
 \begin{definitions}
-  \termdefinition{logic}{specification of valid reasoning that comprises signatures\index{signature}, sentences\index{sentence},
-models \index{model}, and a \termref{satisfaction relation} between models\index{module} and sentences\index{sentence}.}
+  \termdefinition{logic}{specification of valid reasoning that comprises signatures\index{signature} \cbs  (user defined vocabularies)\cbe, 
+models \index{model} \cbs (interpretations of these)\cbe,
+sentences\index{sentence} \cbs (constraints on models)\cbe,
+ and a \termref{satisfaction relation} between models\index{module} and sentences\index{sentence}.}
   \begin{note}
     Most OMS languages have an underlying logic.
   \end{note}
@@ -2456,7 +2458,10 @@ There is also a supports relation between OMS languages and serializations.
 \end{note}
 
  \termdefinition{institution}{metaframework mathematically formalizing
-the notion of a \termref{logic}.}
+the notion of a \termref{logic}, \cbs providing formal interfaces
+for the notions of
+\termref{signature}, \termref{model}, \termref{sentence}
+and \termref{satisfaction}.\cbe}
 \cbs \begin{note}
 In order to support a broad range of 
 OMS languages and enable interoperability between them, 
@@ -2464,9 +2469,15 @@ the semantics of \DOL needs to be defined in a way that abstracts from
 the differences of the logic language aspects of  OMS languages. 
 Institutions provide such a framework. 
 \end{note} 
+ \begin{note}
+The notion of institution uses \termref{category} theory for
+providing formal interfaces for the notions of
+\termref{signature}, \termref{model}, \termref{sentence}
+and \termref{satisfaction}.
+\end{note} 
 \cbe
 \begin{note}
- See clause~\ref{c:semantics} for a formal definition.
+ See \cbs Definition~\ref{def:inst} in \cbe clause~\ref{c:semantics} for a formal definition.
 \end{note}
 
   \termdefinition{logic translation}{mapping of a source
